Finish index gui

--- a/login.html
+++ b/login.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>Login</title>
-
-  <script src="dist/js/jquery.js"></script>
-  <script src="dist/js/bootstrap.min.js"></script>
-
-  <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="dist/css/main.css" rel="stylesheet">
-  <link href="dist/css/font-awesome.min.css" rel="stylesheet">
-  <link href="dist/css/animate-custom.css" rel="stylesheet">
-
-<script src="dist/js/jquery.min.js"></script>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Login</title>
+    <script src="dist/js/jquery.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/main.css" rel="stylesheet">
+    <link href="dist/css/font-awesome.min.css" rel="stylesheet">
+    <link href="dist/css/animate-custom.css" rel="stylesheet">
+    <script src="dist/js/jquery.min.js"></script>
 </head>
 
-<body data-spy="scroll" data-offset="0" >
-<div id="navbar-main">
+<body data-spy="scroll" data-offset="0">
 
-  <div class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand"><i class="fa fa-location-arrow"></i> Login</a> </div>
-      <!--<div class="navbar-collapse collapse">-->
-      </div>
+<div id="navbar-main">
+    <div class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand"><i class="fa fa-location-arrow"></i> Login</a></div>
+            <!--<div class="navbar-collapse collapse">-->
+        </div>
     </div>
-  </div>
+</div>
 </div>
 
 <div id="login" name="login">
-  <div class="container">
-    <div class="row white">
-      <div class="col-md-6"> <img class="img-responsive" src="dist/img/pc.jpg" align=""> </div>
-      <div class="col-md-6">
-        <div class="col-lg-8 col-lg-offset-2 centered">
-          <form id="loginform" method="post" class="form" role="form">
-            <div class="row">
-              <div class="col-xs-6 col-md-12 form-group">
-                <input class="form-control" id="name" name="name" placeholder="Name" type="text" required />
-              </div>
-              </div>
-            <div class="row">
-              <div class="col-xs-6 col-md-12 form-group">
-                <input class="form-control" id="password" name="password" placeholder="Password" type="password" required />
-              </div>
+    <div class="container">
+        <div class="row white">
+            <div class="col-md-6"><img class="img-responsive" src="dist/img/pc.jpg" align=""></div>
+            <div class="col-md-6">
+                <div class="col-lg-8 col-lg-offset-2 centered">
+                    <form id="loginform" method="post" class="form" role="form">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-12 form-group">
+                                <input class="form-control" id="name" name="name" placeholder="Name" type="text"
+                                       required/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 col-md-12 form-group">
+                                <input class="form-control" id="password" name="password" placeholder="Password"
+                                       type="password" required/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 col-md-12">
+                                <button class="btn btn btn-lg" type="submit">Login</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="row">
-              <div class="col-xs-6 col-md-12">
-                <button class="btn btn btn-lg" type="submit">Login</button>
-              </div>
-            </div>
-          </form>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 </body>
