--- a/index.html
+++ b/index.html
@@ -6,73 +6,125 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>WebDP</title>
-
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
-
-
-
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/main.css" rel="stylesheet">
+    <link href="dist/css/font-awesome.min.css" rel="stylesheet">
+    <link href="dist/css/animate-custom.css" rel="stylesheet">
 </head>
-<body>
 
-<hr>
-<p class="active-tab"><strong>Active Tab</strong>: <span></span></p>
-<p class="previous-tab"><strong>Previous Tab</strong>: <span></span></p>
-<hr>
-<ul id="myTab" class="nav nav-tabs">
-    <li class="active"><a href="#home" data-toggle="tab">
-        Tutorial Point Home</a></li>
-    <li><a href="#ios" data-toggle="tab">iOS</a></li>
-    <li class="dropdown">
-        <a href="#" id="myTabDrop1" class="dropdown-toggle"
-           data-toggle="dropdown">
-            Java <b class="caret"></b></a>
-        <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
-            <li><a href="#jmeter" tabindex="-1" data-toggle="tab">jmeter</a></li>
-            <li><a href="#ejb" tabindex="-1" data-toggle="tab">ejb</a></li>
-        </ul>
-    </li>
-</ul>
-<div id="myTabContent" class="tab-content">
-    <div class="tab-pane fade in active" id="home">
-        <p>Tutorials Point is a place for beginners in all technical areas.
-            This website covers most of the latest technoligies and explains
-            each of the technology with simple examples. You also have a
-            <b>tryit</b> editor, wherein you can edit your code and
-            try out different possibilities of the examples.</p>
-    </div>
-    <div class="tab-pane fade" id="ios">
-        <p>iOS is a mobile operating system developed and distributed by Apple
-            Inc. Originally released in 2007 for the iPhone, iPod Touch, and
-            Apple TV. iOS is derived from OS X, with which it shares the
-            Darwin foundation. iOS is Apple's mobile version of the
-            OS X operating system used on Apple computers.</p>
-    </div>
-    <div class="tab-pane fade" id="jmeter">
-        <p>jMeter is an Open Source testing software. It is 100% pure
-            Java application for load and performance testing.</p>
-    </div>
-    <div class="tab-pane fade" id="ejb">
-        <p>Enterprise Java Beans (EJB) is a development architecture
-            for building highly scalable and robust enterprise level
-            applications to be deployed on J2EE compliant
-            Application Server such as JBOSS, Web Logic etc.
-        </p>
+<body data-spy="scroll" data-offset="0">
+<div id="navbar-main">
+    <div class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand"><i class="fa fa-location-arrow"></i> Web DP</a></div>
+            <!--<div class="navbar-collapse collapse">-->
+        </div>
     </div>
 </div>
-<script>
-    $(function(){
-        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-            // Get the name of active tab
-            var activeTab = $(e.target).text();
-            // Get the name of previous tab
-            var previousTab = $(e.relatedTarget).text();
-            $(".active-tab span").html(activeTab);
-            $(".previous-tab span").html(previousTab);
-        });
-    });
-</script>
+</div>
+
+<div id="webdp" name="webdp">
+    <div class="row white">
+        <div class="col-lg-8 col-lg-offset-2 centered">
+            <ul id="myTab" class="nav nav-tabs">
+                <li class="active"><a href="#status" data-toggle="tab">
+                    <img class="img-responsive" src="dist/img/monitor_focus.png" align="">
+                    Status
+                </a></li>
+                <li class="active"><a href="#deploy" data-toggle="tab">
+                    <img class="img-responsive" src="dist/img/console_focus.png" align="">
+                    Deploy
+                </a></li>
+            </ul>
+            <div id="myTabContent" class="tab-content">
+                <div class="tab-pane fade in active " id="status">
+                    <div class="table-responsive">
+                        <table class="table" width="100%">
+                            <thead class="success">
+                            <tr>
+                                <th>Info</th>
+                                <th>DP Name</th>
+                                <th>Time</th>
+                            </tr>
+                            </thead>
+                            <tbody align="left">
+                            <tr class="success">
+                                <td>John</td>
+                                <td>Doe</td>
+                                <td>john@example.com</td>
+                            </tr>
+                            <tr class="danger">
+                                <td>Mary</td>
+                                <td>Moe</td>
+                                <td>mary@example.com</td>
+                            </tr>
+                            <tr class="info">
+                                <td>July</td>
+                                <td>Dooley</td>
+                                <td>july@example.com</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="deploy">
+                    <div class="col-md-16">
+                        <form id="dpform" method="post" class="form" role="form">
+                            <table class="table" width="100%">
+                                <tbody align="center">
+                                <tr>
+                                    <td>DP</td>
+                                    <td><select class="form-control">
+                                        <option value="one">One</option>
+                                        <option value="two">Two</option>
+                                        <option value="three">Three</option>
+                                        <option value="four">Four</option>
+                                        <option value="five">Five</option>
+                                    </select>
+                                    </td>
+
+                                </tr>
+
+                                <tr>
+                                    <td>Profile</td>
+                                    <td><select class="form-control">
+                                        <option value="one">One</option>
+                                        <option value="two">Two</option>
+                                        <option value="three">Three</option>
+                                        <option value="four">Four</option>
+                                        <option value="five">Five</option>
+                                    </select>
+                                    </td>
+                                </tr>
+
+                                <tr>
+
+                                    <td>
+
+                                    </td>
+                                    <td>
+
+                                    </td>
+                                </tr>
+
+
+                                </tbody>
+                            </table>
+                            <button class="btn btn btn-lg" type="submit">Deploy</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 </body>
 </html>
