--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="loginapp">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +13,11 @@
     <link href="dist/css/font-awesome.min.css" rel="stylesheet">
     <link href="dist/css/animate-custom.css" rel="stylesheet">
     <script src="dist/js/jquery.min.js"></script>
+    <script src="dist/js/angular.min.js"></script>
+    <script src="dist/js/app.js"></script>
 </head>
 
-<body data-spy="scroll" data-offset="0">
-
+<body data-spy="scroll" data-offset="0" ng-controller="loginctrl">
 <div id="navbar-main">
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -37,22 +38,22 @@
             <div class="col-md-6"><img class="img-responsive" src="dist/img/pc.jpg" align=""></div>
             <div class="col-md-6">
                 <div class="col-lg-8 col-lg-offset-2 centered">
-                    <form id="loginform" method="post" class="form" role="form">
+                    <form id="loginform" class="form" role="form">
                         <div class="row">
                             <div class="col-xs-6 col-md-12 form-group">
                                 <input class="form-control" id="name" name="name" placeholder="Name" type="text"
-                                       required/>
+                                       required ng-model="loginname"/>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 col-md-12 form-group">
                                 <input class="form-control" id="password" name="password" placeholder="Password"
-                                       type="password" required/>
+                                       type="password" required ng-model="psw"/>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 col-md-12">
-                                <button class="btn btn btn-lg" type="submit">Login</button>
+                                <button class="btn btn btn-lg" ng-click="verify()" >Login</button>
                             </div>
                         </div>
                     </form>
