--- a/dp_status.html
+++ b/dp_status.html
@@ -32,26 +32,16 @@
                             <table class="table" width="100%">
                                 <thead class="success">
                                 <tr>
-                                    <th>Info</th>
-                                    <th>DP Name</th>
                                     <th>Time</th>
+                                    <th>DP Name</th>
+                                    <th>Info</th>
                                 </tr>
                                 </thead>
                                 <tbody align="left">
-                                <tr class="success">
-                                    <td>John</td>
-                                    <td>Doe</td>
-                                    <td>john@example.com</td>
-                                </tr>
-                                <tr class="danger">
-                                    <td>Mary</td>
-                                    <td>Moe</td>
-                                    <td>mary@example.com</td>
-                                </tr>
-                                <tr class="info">
-                                    <td>July</td>
-                                    <td>Dooley</td>
-                                    <td>july@example.com</td>
+                                <tr ng-repeat="s in statuslist" ng-class="$index %2 == 0?'success':'danger'">
+                                    <td>{{s.time}}</td>
+                                    <td>{{s.name}}</td>
+                                    <td>{{s.info}}</td>
                                 </tr>
                                 </tbody>
                             </table>
