Add refresh time for status

--- a/dp_status.html
+++ b/dp_status.html
@@ -26,6 +26,7 @@
                         Deploy
                     </a></li>
                 </ul>
+                <a align="left">{{logContext}}</a>
                 <div id="myTabContent" class="tab-content">
                     <div class="tab-pane fade in active " id="status">
                         <div class="table-responsive">
