add setting logic

--- a/dp_deploy.html
+++ b/dp_deploy.html
@@ -18,12 +18,16 @@
             <div class="col-lg-8 col-lg-offset-2 centered">
                 <ul id="myTab" class="nav nav-tabs">
                     <li><a href="#status" data-toggle="tab">
-                        <img class="img-responsive" src="dist/img/monitor_focus.png" align="">
+                        <img class="img-responsive" src="dist/img/monitor_nonfocus.png" align="">
                         Status
                     </a></li>
                     <li class="active show"><a href="#deploy" data-toggle="tab">
                         <img class="img-responsive" src="dist/img/console_focus.png" align="">
                         Deploy
+                    </a></li>
+                    <li><a href="#setting" data-toggle="tab">
+                        <img class="img-responsive" src="dist/img/preferences_nonfocus.png" align="">
+                        Setting
                     </a></li>
                 </ul>
                 <div id="myTabContent" class="tab-content">
