--- a/dp_status.html
+++ b/dp_status.html
@@ -22,8 +22,12 @@
                         Status
                     </a></li>
                     <li><a href="#deploy" data-toggle="tab">
-                        <img class="img-responsive" src="dist/img/console_focus.png" align="">
+                        <img class="img-responsive" src="dist/img/console_nonfocus.png" align="">
                         Deploy
+                    </a></li>
+                    <li><a href="#setting" data-toggle="tab">
+                        <img class="img-responsive" src="dist/img/preferences_nonfocus.png" align="">
+                        Setting
                     </a></li>
                 </ul>
                 <a align="left">{{logContext}}</a>
